fixed search results sidebar z-index

--- a/assets/application.css.scss
+++ b/assets/application.css.scss
@@ -84,6 +84,10 @@ input::placeholder {
   grid-row-gap: 7px;
 }
 
+.offcanvas {
+  z-index: 10000;
+}
+
 .horizontal_grid_item{
   margin-left: 20px;
   margin-right: 20px;
